fixed comma and aligniation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -62,6 +62,7 @@ body{
 }
 
 .title.welcome{
+	text-align: center;
 	padding-top: 8%;
 	text-transform: capitalize;
 	font-weight: 400;
